--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -17,19 +17,19 @@
     },
     {
         "name" : "Yesterday",
-        "sherif_total" : 0,
+        "sherif_total" : 1,
         "sherif_win" : 0,
         "don_total" : 1,
         "don_win" : 0,
         "mafia_total" : 2,
         "mafia_win" : 1,
-        "citizen_total" : 6,
+        "citizen_total" : 8,
         "citizen_win" : 3,
-        "first_kill" : 0,
+        "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 26.5,
+        "game_points" : 33,
         "role_points" : 12,
-        "players_points" : 5.1
+        "players_points" : 6.3
     },
     {
         "name" : "Алиса(Лера)",
@@ -101,47 +101,47 @@
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 2,
-        "mafia_win" : 0,
-        "citizen_total" : 9,
+        "mafia_total" : 3,
+        "mafia_win" : 1,
+        "citizen_total" : 11,
         "citizen_win" : 3,
         "first_kill" : 4,
         "best_turn" : 2,
-        "game_points" : 26,
-        "role_points" : 9,
-        "players_points" : 0.6
+        "game_points" : 34,
+        "role_points" : 12,
+        "players_points" : 1.8
     },
     {
         "name" : "Алл",
         "sherif_total" : 0,
         "sherif_win" : 0,
-        "don_total" : 3,
-        "don_win" : 2,
+        "don_total" : 4,
+        "don_win" : 3,
         "mafia_total" : 3,
         "mafia_win" : 2,
-        "citizen_total" : 6,
+        "citizen_total" : 8,
         "citizen_win" : 3,
         "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 29,
-        "role_points" : 21,
+        "game_points" : 33.5,
+        "role_points" : 24,
         "players_points" : 2.1
     },
     {
         "name" : "Sol",
-        "sherif_total" : 1,
+        "sherif_total" : 2,
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 3,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 4,
         "citizen_win" : 1,
-        "first_kill" : 1,
-        "best_turn" : 0,
-        "game_points" : 9.5,
-        "role_points" : 3,
-        "players_points" : 0
+        "first_kill" : 2,
+        "best_turn" : 1,
+        "game_points" : 17.5,
+        "role_points" : 6,
+        "players_points" : 0.9
     },
     {
         "name" : "Лекса",
@@ -151,11 +151,11 @@
         "don_win" : 0,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 4,
+        "citizen_total" : 7,
         "citizen_win" : 1,
-        "first_kill" : 0,
+        "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 12.5,
+        "game_points" : 18,
         "role_points" : 9,
         "players_points" : 0.6
     },
@@ -167,13 +167,13 @@
         "don_win" : 0,
         "mafia_total" : 5,
         "mafia_win" : 2,
-        "citizen_total" : 7,
+        "citizen_total" : 10,
         "citizen_win" : 4,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 27.5,
+        "game_points" : 33.5,
         "role_points" : 18,
-        "players_points" : 7.5
+        "players_points" : 7.8
     },
     {
         "name" : "Волга",
@@ -286,5 +286,69 @@
         "game_points" : 9,
         "role_points" : 6,
         "players_points" : 2.7
+    },
+    {
+        "name" : "Light",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 2,
+        "don_win" : 2,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 1,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 9.5,
+        "role_points" : 6,
+        "players_points" : 2.1
+    },
+    {
+        "name" : "Наркоманка",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 2,
+        "mafia_win" : 2,
+        "citizen_total" : 1,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 7.5,
+        "role_points" : 6,
+        "players_points" : 0.6
+    },
+    {
+        "name" : "Тихий",
+        "sherif_total" : 1,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 2,
+        "mafia_win" : 2,
+        "citizen_total" : 0,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 8.5,
+        "role_points" : 6,
+        "players_points" : 2.4
+    },
+    {
+        "name" : "Никки",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 3,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 7,
+        "role_points" : 0,
+        "players_points" : 0
     }
 ]
