[TG] ev.5 results

--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -7,29 +7,29 @@
         "don_win" : 1,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 5,
-        "citizen_win" : 2,
-        "first_kill" : 1,
+        "citizen_total" : 10,
+        "citizen_win" : 5,
+        "first_kill" : 2,
         "best_turn" : 1,
-        "game_points" : 24.0,
-        "role_points" : 12,
-        "players_points" : 4.2
+        "game_points" : 39.5,
+        "role_points" : 21,
+        "players_points" : 7.8
     },
     {
         "name" : "Yesterday",
         "sherif_total" : 1,
         "sherif_win" : 0,
-        "don_total" : 1,
+        "don_total" : 2,
         "don_win" : 0,
         "mafia_total" : 2,
         "mafia_win" : 1,
-        "citizen_total" : 8,
-        "citizen_win" : 3,
+        "citizen_total" : 12,
+        "citizen_win" : 5,
         "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 33,
-        "role_points" : 12,
-        "players_points" : 6.3
+        "game_points" : 46,
+        "role_points" : 18,
+        "players_points" : 6.9
     },
     {
         "name" : "Алиса(Лера)",
@@ -117,15 +117,15 @@
         "sherif_win" : 0,
         "don_total" : 4,
         "don_win" : 3,
-        "mafia_total" : 3,
-        "mafia_win" : 2,
-        "citizen_total" : 8,
-        "citizen_win" : 3,
+        "mafia_total" : 6,
+        "mafia_win" : 4,
+        "citizen_total" : 10,
+        "citizen_win" : 5,
         "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 33.5,
-        "role_points" : 24,
-        "players_points" : 2.1
+        "game_points" : 47.5,
+        "role_points" : 36,
+        "players_points" : 6.3
     },
     {
         "name" : "Sol",
@@ -241,18 +241,18 @@
     },
     {
         "name" : "Гаджет",
-        "sherif_total" : 3,
+        "sherif_total" : 4,
         "sherif_win" : 2,
         "don_total" : 2,
         "don_win" : 2,
-        "mafia_total" : 0,
+        "mafia_total" : 1,
         "mafia_win" : 0,
-        "citizen_total" : 3,
-        "citizen_win" : 2,
+        "citizen_total" : 5,
+        "citizen_win" : 4,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 17,
-        "role_points" : 18,
+        "game_points" : 26,
+        "role_points" : 24,
         "players_points" : 0.9
     },
     {
@@ -289,19 +289,19 @@
     },
     {
         "name" : "Light",
-        "sherif_total" : 0,
-        "sherif_win" : 0,
-        "don_total" : 2,
+        "sherif_total" : 2,
+        "sherif_win" : 1,
+        "don_total" : 3,
         "don_win" : 2,
-        "mafia_total" : 0,
+        "mafia_total" : 1,
         "mafia_win" : 0,
-        "citizen_total" : 1,
+        "citizen_total" : 2,
         "citizen_win" : 0,
-        "first_kill" : 0,
+        "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 9.5,
-        "role_points" : 6,
-        "players_points" : 2.1
+        "game_points" : 19.5,
+        "role_points" : 9,
+        "players_points" : 2.4
     },
     {
         "name" : "Наркоманка",
@@ -343,12 +343,92 @@
         "don_win" : 0,
         "mafia_total" : 0,
         "mafia_win" : 0,
+        "citizen_total" : 6,
+        "citizen_win" : 2,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 13.5,
+        "role_points" : 6,
+        "players_points" : 0.6
+    },
+    {
+        "name" : "Маг",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 2,
+        "mafia_win" : 0,
         "citizen_total" : 3,
+        "citizen_win" : 1,
+        "first_kill" : 1,
+        "best_turn" : 0,
+        "game_points" : 9.5,
+        "role_points" : 3,
+        "players_points" : 0
+    },
+    {
+        "name" : "Крис",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 0,
+        "citizen_total" : 4,
+        "citizen_win" : 2,
+        "first_kill" : 1,
+        "best_turn" : 0,
+        "game_points" : 12,
+        "role_points" : 6,
+        "players_points" : 1.8
+    },
+    {
+        "name" : "Валерун-Балерун",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 1,
+        "don_win" : 1,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 4,
+        "citizen_win" : 3,
+        "first_kill" : 1,
+        "best_turn" : 0,
+        "game_points" : 13,
+        "role_points" : 12,
+        "players_points" : 2.4
+    },
+    {
+        "name" : "Жнец",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 1,
+        "don_win" : 0,
+        "mafia_total" : 2,
+        "mafia_win" : 1,
+        "citizen_total" : 1,
+        "citizen_win" : 1,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 9.5,
+        "role_points" : 6,
+        "players_points" : 1.5
+    },
+    {
+        "name" : "Бамблби",
+        "sherif_total" : 2,
+        "sherif_win" : 2,
+        "don_total" : 1,
+        "don_win" : 1,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 1,
         "citizen_win" : 0,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 7,
-        "role_points" : 0,
+        "game_points" : 9,
+        "role_points" : 9,
         "players_points" : 0
     }
 ]
