[TG] rating ev 6 was updated

--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -17,50 +17,50 @@
     },
     {
         "name" : "Yesterday",
-        "sherif_total" : 1,
+        "sherif_total" : 2,
         "sherif_win" : 0,
         "don_total" : 2,
         "don_win" : 0,
         "mafia_total" : 2,
         "mafia_win" : 1,
-        "citizen_total" : 12,
-        "citizen_win" : 5,
+        "citizen_total" : 15,
+        "citizen_win" : 7,
         "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 46,
-        "role_points" : 18,
-        "players_points" : 6.9
+        "game_points" : 56,
+        "role_points" : 24,
+        "players_points" : 7.8
     },
     {
         "name" : "Алиса(Лера)",
         "sherif_total" : 1,
         "sherif_win" : 1,
-        "don_total" : 0,
-        "don_win" : 0,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 3,
+        "don_total" : 1,
+        "don_win" : 1,
+        "mafia_total" : 2,
+        "mafia_win" : 1,
+        "citizen_total" : 4,
         "citizen_win" : 0,
-        "first_kill" : 0,
+        "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 8.5,
-        "role_points" : 3,
-        "players_points" : 0.3
+        "game_points" : 18.5,
+        "role_points" : 9,
+        "players_points" : 3
     },
     {
         "name" : "Тургенев",
-        "sherif_total" : 0,
+        "sherif_total" : 1,
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
         "mafia_total" : 0,
         "mafia_win" : 0,
-        "citizen_total" : 4,
-        "citizen_win" : 1,
+        "citizen_total" : 7,
+        "citizen_win" : 2,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 7,
-        "role_points" : 3,
+        "game_points" : 14.5,
+        "role_points" : 6,
         "players_points" : 0.3
     },
     {
@@ -99,47 +99,47 @@
         "name" : "Йода",
         "sherif_total" : 1,
         "sherif_win" : 0,
-        "don_total" : 0,
-        "don_win" : 0,
-        "mafia_total" : 3,
-        "mafia_win" : 1,
-        "citizen_total" : 11,
-        "citizen_win" : 3,
+        "don_total" : 1,
+        "don_win" : 1,
+        "mafia_total" : 4,
+        "mafia_win" : 2,
+        "citizen_total" : 13,
+        "citizen_win" : 4,
         "first_kill" : 4,
         "best_turn" : 2,
-        "game_points" : 34,
-        "role_points" : 12,
-        "players_points" : 1.8
+        "game_points" : 44,
+        "role_points" : 21,
+        "players_points" : 2.7
     },
     {
         "name" : "Алл",
-        "sherif_total" : 0,
+        "sherif_total" : 1,
         "sherif_win" : 0,
         "don_total" : 4,
         "don_win" : 3,
-        "mafia_total" : 6,
+        "mafia_total" : 7,
         "mafia_win" : 4,
-        "citizen_total" : 10,
-        "citizen_win" : 5,
+        "citizen_total" : 12,
+        "citizen_win" : 6,
         "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 47.5,
-        "role_points" : 36,
+        "game_points" : 54.5,
+        "role_points" : 39,
         "players_points" : 6.3
     },
     {
         "name" : "Sol",
         "sherif_total" : 2,
         "sherif_win" : 0,
-        "don_total" : 0,
+        "don_total" : 2,
         "don_win" : 0,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 4,
+        "citizen_total" : 6,
         "citizen_win" : 1,
         "first_kill" : 2,
         "best_turn" : 1,
-        "game_points" : 17.5,
+        "game_points" : 24.5,
         "role_points" : 6,
         "players_points" : 0.9
     },
@@ -167,13 +167,13 @@
         "don_win" : 0,
         "mafia_total" : 5,
         "mafia_win" : 2,
-        "citizen_total" : 10,
-        "citizen_win" : 4,
+        "citizen_total" : 14,
+        "citizen_win" : 6,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 33.5,
-        "role_points" : 18,
-        "players_points" : 7.8
+        "game_points" : 43.5,
+        "role_points" : 24,
+        "players_points" : 8.4
     },
     {
         "name" : "Волга",
@@ -199,29 +199,29 @@
         "don_win" : 0,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 2,
-        "citizen_win" : 1,
+        "citizen_total" : 3,
+        "citizen_win" : 2,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 9,
-        "role_points" : 6,
+        "game_points" : 11,
+        "role_points" : 9,
         "players_points" : 0.3
     },
     {
         "name" : "Артик",
         "sherif_total" : 2,
         "sherif_win" : 1,
-        "don_total" : 1,
-        "don_win" : 0,
+        "don_total" : 2,
+        "don_win" : 1,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 4,
-        "citizen_win" : 2,
-        "first_kill" : 2,
-        "best_turn" : 2,
-        "game_points" : 26.5,
-        "role_points" : 12,
-        "players_points" : 6.3
+        "citizen_total" : 8,
+        "citizen_win" : 4,
+        "first_kill" : 4,
+        "best_turn" : 3,
+        "game_points" : 41,
+        "role_points" : 21,
+        "players_points" : 9.5
     },
     {
         "name" : "Sky",
@@ -273,19 +273,19 @@
     },
     {
         "name" : "Аспин",
-        "sherif_total" : 0,
-        "sherif_win" : 0,
+        "sherif_total" : 1,
+        "sherif_win" : 1,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 1,
-        "mafia_win" : 0,
-        "citizen_total" : 2,
+        "mafia_total" : 2,
+        "mafia_win" : 1,
+        "citizen_total" : 3,
         "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 9,
-        "role_points" : 6,
-        "players_points" : 2.7
+        "game_points" : 16.5,
+        "role_points" : 12,
+        "players_points" : 3.6
     },
     {
         "name" : "Light",
@@ -295,12 +295,12 @@
         "don_win" : 2,
         "mafia_total" : 1,
         "mafia_win" : 0,
-        "citizen_total" : 2,
-        "citizen_win" : 0,
+        "citizen_total" : 6,
+        "citizen_win" : 1,
         "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 19.5,
-        "role_points" : 9,
+        "game_points" : 26.5,
+        "role_points" : 12,
         "players_points" : 2.4
     },
     {
@@ -385,19 +385,19 @@
     },
     {
         "name" : "Валерун-Балерун",
-        "sherif_total" : 0,
-        "sherif_win" : 0,
+        "sherif_total" : 1,
+        "sherif_win" : 1,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 4,
-        "citizen_win" : 3,
-        "first_kill" : 1,
-        "best_turn" : 0,
-        "game_points" : 13,
-        "role_points" : 12,
-        "players_points" : 2.4
+        "mafia_total" : 2,
+        "mafia_win" : 2,
+        "citizen_total" : 5,
+        "citizen_win" : 4,
+        "first_kill" : 2,
+        "best_turn" : 1,
+        "game_points" : 25.5,
+        "role_points" : 24,
+        "players_points" : 6.6
     },
     {
         "name" : "Жнец",
@@ -430,5 +430,21 @@
         "game_points" : 9,
         "role_points" : 9,
         "players_points" : 0
+    },
+    {
+        "name" : "Алиса (Лиза)",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 2,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 3,
+        "role_points" : 8,
+        "players_points" : 1.5
     }
 ]
