--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -3,17 +3,17 @@
         "name" : "Архи",
         "sherif_total" : 0,
         "sherif_win" : 0,
-        "don_total" : 2,
-        "don_win" : 1,
+        "don_total" : 3,
+        "don_win" : 2,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 10,
-        "citizen_win" : 5,
+        "citizen_total" : 13,
+        "citizen_win" : 7,
         "first_kill" : 2,
         "best_turn" : 1,
-        "game_points" : 39.5,
-        "role_points" : 21,
-        "players_points" : 7.8
+        "game_points" : 51.5,
+        "role_points" : 30,
+        "players_points" : 10.5
     },
     {
         "name" : "Yesterday",
@@ -21,15 +21,15 @@
         "sherif_win" : 0,
         "don_total" : 2,
         "don_win" : 0,
-        "mafia_total" : 2,
-        "mafia_win" : 1,
-        "citizen_total" : 15,
-        "citizen_win" : 7,
+        "mafia_total" : 4,
+        "mafia_win" : 2,
+        "citizen_total" : 16,
+        "citizen_win" : 8,
         "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 56,
-        "role_points" : 24,
-        "players_points" : 7.8
+        "game_points" : 63.5,
+        "role_points" : 30,
+        "players_points" : 8.4
     },
     {
         "name" : "Алиса(Лера)",
@@ -96,20 +96,20 @@
         "players_points" : 2.1
     },
     {
-        "name" : "Йода",
-        "sherif_total" : 1,
+        "name" : "Yoda",
+        "sherif_total" : 2,
         "sherif_win" : 0,
-        "don_total" : 1,
+        "don_total" : 2,
         "don_win" : 1,
-        "mafia_total" : 4,
+        "mafia_total" : 5,
         "mafia_win" : 2,
-        "citizen_total" : 13,
+        "citizen_total" : 14,
         "citizen_win" : 4,
         "first_kill" : 4,
         "best_turn" : 2,
-        "game_points" : 44,
+        "game_points" : 52,
         "role_points" : 21,
-        "players_points" : 2.7
+        "players_points" : 3
     },
     {
         "name" : "Алл",
@@ -131,17 +131,17 @@
         "name" : "Sol",
         "sherif_total" : 2,
         "sherif_win" : 0,
-        "don_total" : 2,
-        "don_win" : 0,
+        "don_total" : 3,
+        "don_win" : 1,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 6,
-        "citizen_win" : 1,
-        "first_kill" : 2,
+        "citizen_total" : 9,
+        "citizen_win" : 3,
+        "first_kill" : 3,
         "best_turn" : 1,
-        "game_points" : 24.5,
-        "role_points" : 6,
-        "players_points" : 0.9
+        "game_points" : 32,
+        "role_points" : 15,
+        "players_points" : 1.2
     },
     {
         "name" : "Лекса",
@@ -149,15 +149,15 @@
         "sherif_win" : 1,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 1,
-        "mafia_win" : 1,
-        "citizen_total" : 7,
-        "citizen_win" : 1,
+        "mafia_total" : 3,
+        "mafia_win" : 2,
+        "citizen_total" : 8,
+        "citizen_win" : 2,
         "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 18,
-        "role_points" : 9,
-        "players_points" : 0.6
+        "game_points" : 26,
+        "role_points" : 15,
+        "players_points" : 2.6
     },
     {
         "name" : "Опер",
@@ -167,13 +167,13 @@
         "don_win" : 0,
         "mafia_total" : 5,
         "mafia_win" : 2,
-        "citizen_total" : 14,
-        "citizen_win" : 6,
+        "citizen_total" : 17,
+        "citizen_win" : 7,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 43.5,
-        "role_points" : 24,
-        "players_points" : 8.4
+        "game_points" : 51,
+        "role_points" : 27,
+        "players_points" : 9.6
     },
     {
         "name" : "Волга",
@@ -229,15 +229,15 @@
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 3,
-        "citizen_win" : 2,
-        "first_kill" : 1,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 6,
+        "citizen_win" : 4,
+        "first_kill" : 2,
         "best_turn" : 0,
-        "game_points" : 10,
-        "role_points" : 6,
-        "players_points" : 0.6
+        "game_points" : 20.5,
+        "role_points" : 15,
+        "players_points" : 2.7
     },
     {
         "name" : "Гаджет",
@@ -279,28 +279,28 @@
         "don_win" : 1,
         "mafia_total" : 2,
         "mafia_win" : 1,
-        "citizen_total" : 3,
-        "citizen_win" : 1,
-        "first_kill" : 0,
+        "citizen_total" : 6,
+        "citizen_win" : 2,
+        "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 16.5,
-        "role_points" : 12,
+        "game_points" : 22,
+        "role_points" : 15,
         "players_points" : 3.6
     },
     {
         "name" : "Light",
-        "sherif_total" : 2,
-        "sherif_win" : 1,
+        "sherif_total" : 3,
+        "sherif_win" : 2,
         "don_total" : 3,
         "don_win" : 2,
         "mafia_total" : 1,
         "mafia_win" : 0,
-        "citizen_total" : 6,
+        "citizen_total" : 7,
         "citizen_win" : 1,
         "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 26.5,
-        "role_points" : 12,
+        "game_points" : 30,
+        "role_points" : 15,
         "players_points" : 2.4
     },
     {
@@ -341,15 +341,15 @@
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 6,
+        "mafia_total" : 2,
+        "mafia_win" : 1,
+        "citizen_total" : 7,
         "citizen_win" : 2,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 13.5,
-        "role_points" : 6,
-        "players_points" : 0.6
+        "game_points" : 21,
+        "role_points" : 9,
+        "players_points" : 2.7
     },
     {
         "name" : "Маг",
@@ -385,19 +385,20 @@
     },
     {
         "name" : "Валерун-Балерун",
-        "sherif_total" : 1,
+        "sherif_total" : 2,
         "sherif_win" : 1,
-        "don_total" : 1,
+        "don_total" : 2,
         "don_win" : 1,
         "mafia_total" : 2,
         "mafia_win" : 2,
-        "citizen_total" : 5,
-        "citizen_win" : 4,
-        "first_kill" : 2,
-        "best_turn" : 1,
-        "game_points" : 25.5,
-        "role_points" : 24,
-        "players_points" : 6.6
+        "citizen_total" : 7,
+        "citizen_win" : 5,
+        "first_kill" : 3,
+        "best_turn" : 2,
+        "game_points" : 36,
+        "role_points" : 27,
+        "players_points" : 7.2,
+        "hide": true
     },
     {
         "name" : "Жнец",
@@ -433,18 +434,18 @@
     },
     {
         "name" : "Алиса (Лиза)",
-        "sherif_total" : 0,
-        "sherif_win" : 0,
+        "sherif_total" : 1,
+        "sherif_win" : 1,
         "don_total" : 0,
         "don_win" : 0,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 2,
-        "citizen_win" : 0,
+        "citizen_total" : 4,
+        "citizen_win" : 1,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 3,
-        "role_points" : 8,
+        "game_points" : 9,
+        "role_points" : 9,
         "players_points" : 1.5
     }
 ]
