--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -23,28 +23,28 @@
         "don_win" : 0,
         "mafia_total" : 4,
         "mafia_win" : 2,
-        "citizen_total" : 16,
-        "citizen_win" : 8,
-        "first_kill" : 1,
-        "best_turn" : 0,
-        "game_points" : 63.5,
-        "role_points" : 30,
-        "players_points" : 8.4
+        "citizen_total" : 20,
+        "citizen_win" : 10,
+        "first_kill" : 3,
+        "best_turn" : 1,
+        "game_points" : 74,
+        "role_points" : 36,
+        "players_points" : 8.7
     },
     {
         "name" : "Алиса(Лера)",
         "sherif_total" : 1,
         "sherif_win" : 1,
-        "don_total" : 1,
+        "don_total" : 2,
         "don_win" : 1,
-        "mafia_total" : 2,
-        "mafia_win" : 1,
-        "citizen_total" : 4,
+        "mafia_total" : 4,
+        "mafia_win" : 2,
+        "citizen_total" : 5,
         "citizen_win" : 0,
-        "first_kill" : 1,
+        "first_kill" : 2,
         "best_turn" : 0,
-        "game_points" : 18.5,
-        "role_points" : 9,
+        "game_points" : 26.5,
+        "role_points" : 12,
         "players_points" : 3
     },
     {
@@ -117,31 +117,31 @@
         "sherif_win" : 0,
         "don_total" : 4,
         "don_win" : 3,
-        "mafia_total" : 7,
+        "mafia_total" : 8,
         "mafia_win" : 4,
-        "citizen_total" : 12,
-        "citizen_win" : 6,
+        "citizen_total" : 15,
+        "citizen_win" : 7,
         "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 54.5,
-        "role_points" : 39,
-        "players_points" : 6.3
+        "game_points" : 65,
+        "role_points" : 42,
+        "players_points" : 8.4
     },
     {
         "name" : "Sol",
         "sherif_total" : 2,
         "sherif_win" : 0,
-        "don_total" : 3,
-        "don_win" : 1,
-        "mafia_total" : 1,
-        "mafia_win" : 1,
-        "citizen_total" : 9,
-        "citizen_win" : 3,
+        "don_total" : 4,
+        "don_win" : 2,
+        "mafia_total" : 3,
+        "mafia_win" : 2,
+        "citizen_total" : 10,
+        "citizen_win" : 4,
         "first_kill" : 3,
         "best_turn" : 1,
-        "game_points" : 32,
-        "role_points" : 15,
-        "players_points" : 1.2
+        "game_points" : 43.5,
+        "role_points" : 24,
+        "players_points" : 3.3
     },
     {
         "name" : "Лекса",
@@ -167,12 +167,12 @@
         "don_win" : 0,
         "mafia_total" : 5,
         "mafia_win" : 2,
-        "citizen_total" : 17,
-        "citizen_win" : 7,
+        "citizen_total" : 21,
+        "citizen_win" : 9,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 51,
-        "role_points" : 27,
+        "game_points" : 59.5,
+        "role_points" : 33,
         "players_points" : 9.6
     },
     {
@@ -211,17 +211,17 @@
         "name" : "Артик",
         "sherif_total" : 2,
         "sherif_win" : 1,
-        "don_total" : 2,
-        "don_win" : 1,
+        "don_total" : 3,
+        "don_win" : 2,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 8,
-        "citizen_win" : 4,
-        "first_kill" : 4,
+        "citizen_total" : 11,
+        "citizen_win" : 6,
+        "first_kill" : 5,
         "best_turn" : 3,
-        "game_points" : 41,
-        "role_points" : 21,
-        "players_points" : 9.5
+        "game_points" : 52.5,
+        "role_points" : 30,
+        "players_points" : 13.1
     },
     {
         "name" : "Sky",
@@ -261,15 +261,15 @@
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 2,
-        "mafia_win" : 1,
-        "citizen_total" : 2,
-        "citizen_win" : 1,
+        "mafia_total" : 4,
+        "mafia_win" : 2,
+        "citizen_total" : 4,
+        "citizen_win" : 2,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 7.5,
-        "role_points" : 6,
-        "players_points" : 0
+        "game_points" : 15.5,
+        "role_points" : 12,
+        "players_points" : 0.3
     },
     {
         "name" : "Аспин",
@@ -291,17 +291,17 @@
         "name" : "Light",
         "sherif_total" : 3,
         "sherif_win" : 2,
-        "don_total" : 3,
+        "don_total" : 4,
         "don_win" : 2,
-        "mafia_total" : 1,
+        "mafia_total" : 2,
         "mafia_win" : 0,
-        "citizen_total" : 7,
+        "citizen_total" : 9,
         "citizen_win" : 1,
         "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 30,
+        "game_points" : 37.5,
         "role_points" : 15,
-        "players_points" : 2.4
+        "players_points" : 2.7
     },
     {
         "name" : "Наркоманка",
@@ -422,14 +422,14 @@
         "sherif_win" : 2,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 1,
-        "citizen_win" : 0,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 4,
+        "citizen_win" : 2,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 9,
-        "role_points" : 9,
+        "game_points" : 17.5,
+        "role_points" : 18,
         "players_points" : 0
     },
     {
@@ -447,5 +447,21 @@
         "game_points" : 9,
         "role_points" : 9,
         "players_points" : 1.5
+    },
+    {
+        "name" : "Qwerty",
+        "sherif_total" : 2,
+        "sherif_win" : 1,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 2,
+        "citizen_win" : 1,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 10,
+        "role_points" : 6,
+        "players_points" : 0.3
     }
 ]
