[TG] 9 evening was calculated

--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -3,65 +3,65 @@
         "name" : "Архи",
         "sherif_total" : 0,
         "sherif_win" : 0,
-        "don_total" : 3,
+        "don_total" : 5,
         "don_win" : 2,
-        "mafia_total" : 1,
-        "mafia_win" : 1,
-        "citizen_total" : 13,
-        "citizen_win" : 7,
+        "mafia_total" : 2,
+        "mafia_win" : 2,
+        "citizen_total" : 15,
+        "citizen_win" : 8,
         "first_kill" : 2,
         "best_turn" : 1,
-        "game_points" : 51.5,
-        "role_points" : 30,
-        "players_points" : 10.5
+        "game_points" : 64.5,
+        "role_points" : 36,
+        "players_points" : 11.7
     },
     {
         "name" : "Yesterday",
         "sherif_total" : 2,
         "sherif_win" : 0,
-        "don_total" : 2,
-        "don_win" : 0,
-        "mafia_total" : 4,
-        "mafia_win" : 2,
-        "citizen_total" : 20,
-        "citizen_win" : 10,
-        "first_kill" : 3,
-        "best_turn" : 1,
-        "game_points" : 74,
-        "role_points" : 36,
-        "players_points" : 8.7
-    },
-    {
-        "name" : "Алиса(Лера)",
-        "sherif_total" : 1,
-        "sherif_win" : 1,
-        "don_total" : 2,
+        "don_total" : 3,
         "don_win" : 1,
         "mafia_total" : 4,
         "mafia_win" : 2,
-        "citizen_total" : 5,
-        "citizen_win" : 0,
-        "first_kill" : 2,
-        "best_turn" : 0,
-        "game_points" : 26.5,
-        "role_points" : 12,
-        "players_points" : 3
+        "citizen_total" : 24,
+        "citizen_win" : 13,
+        "first_kill" : 3,
+        "best_turn" : 1,
+        "game_points" : 88.5,
+        "role_points" : 48,
+        "players_points" : 14.1
+    },
+    {
+        "name" : "Алиса(Лера)",
+        "sherif_total" : 2,
+        "sherif_win" : 2,
+        "don_total" : 3,
+        "don_win" : 2,
+        "mafia_total" : 4,
+        "mafia_win" : 2,
+        "citizen_total" : 8,
+        "citizen_win" : 2,
+        "first_kill" : 3,
+        "best_turn" : 2,
+        "game_points" : 41.5,
+        "role_points" : 24,
+        "players_points" : 6
     },
     {
         "name" : "Тургенев",
         "sherif_total" : 1,
         "sherif_win" : 0,
-        "don_total" : 0,
+        "don_total" : 1,
         "don_win" : 0,
-        "mafia_total" : 0,
-        "mafia_win" : 0,
-        "citizen_total" : 7,
-        "citizen_win" : 2,
+        "mafia_total" : 1,
+        "mafia_win" : 1,
+        "citizen_total" : 10,
+        "citizen_win" : 4,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 14.5,
-        "role_points" : 6,
-        "players_points" : 0.3
+        "game_points" : 27.5,
+        "role_points" : 15,
+        "players_points" : 1.2
     },
     {
         "name" : "Криста",
@@ -101,14 +101,14 @@
         "sherif_win" : 0,
         "don_total" : 2,
         "don_win" : 1,
-        "mafia_total" : 5,
+        "mafia_total" : 6,
         "mafia_win" : 2,
-        "citizen_total" : 14,
-        "citizen_win" : 4,
-        "first_kill" : 4,
+        "citizen_total" : 18,
+        "citizen_win" : 6,
+        "first_kill" : 5,
         "best_turn" : 2,
-        "game_points" : 52,
-        "role_points" : 21,
+        "game_points" : 62.5,
+        "role_points" : 27,
         "players_points" : 3
     },
     {
@@ -149,15 +149,15 @@
         "sherif_win" : 1,
         "don_total" : 0,
         "don_win" : 0,
-        "mafia_total" : 3,
+        "mafia_total" : 5,
         "mafia_win" : 2,
-        "citizen_total" : 8,
-        "citizen_win" : 2,
-        "first_kill" : 1,
+        "citizen_total" : 11,
+        "citizen_win" : 3,
+        "first_kill" : 2,
         "best_turn" : 0,
-        "game_points" : 26,
-        "role_points" : 15,
-        "players_points" : 2.6
+        "game_points" : 36,
+        "role_points" : 18,
+        "players_points" : 2.9
     },
     {
         "name" : "Опер",
@@ -225,19 +225,19 @@
     },
     {
         "name" : "Sky",
-        "sherif_total" : 1,
-        "sherif_win" : 0,
+        "sherif_total" : 4,
+        "sherif_win" : 1,
         "don_total" : 0,
         "don_win" : 0,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 6,
-        "citizen_win" : 4,
+        "citizen_total" : 8,
+        "citizen_win" : 6,
         "first_kill" : 2,
         "best_turn" : 0,
-        "game_points" : 20.5,
-        "role_points" : 15,
-        "players_points" : 2.7
+        "game_points" : 33.5,
+        "role_points" : 24,
+        "players_points" : 3.9
     },
     {
         "name" : "Гаджет",
@@ -418,19 +418,19 @@
     },
     {
         "name" : "Бамблби",
-        "sherif_total" : 2,
-        "sherif_win" : 2,
+        "sherif_total" : 3,
+        "sherif_win" : 3,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 1,
-        "mafia_win" : 1,
-        "citizen_total" : 4,
-        "citizen_win" : 2,
+        "mafia_total" : 4,
+        "mafia_win" : 3,
+        "citizen_total" : 5,
+        "citizen_win" : 3,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 17.5,
-        "role_points" : 18,
-        "players_points" : 0
+        "game_points" : 31.5,
+        "role_points" : 30,
+        "players_points" : 1.2
     },
     {
         "name" : "Алиса (Лиза)",
@@ -463,5 +463,37 @@
         "game_points" : 10,
         "role_points" : 6,
         "players_points" : 0.3
+    },
+    {
+        "name" : "Classika",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 5,
+        "citizen_win" : 3,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 13,
+        "role_points" : 9,
+        "players_points" : 0
+    },
+    {
+        "name" : "Саморитянка",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 0,
+        "don_win" : 0,
+        "mafia_total" : 2,
+        "mafia_win" : 0,
+        "citizen_total" : 3,
+        "citizen_win" : 1,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 12,
+        "role_points" : 3,
+        "players_points" : 1.8
     }
 ]
