[TG] Last game of 3-rd season

--- a/thomas-corner/files/season_rating.json
+++ b/thomas-corner/files/season_rating.json
@@ -21,31 +21,31 @@
         "sherif_win" : 0,
         "don_total" : 3,
         "don_win" : 1,
-        "mafia_total" : 4,
-        "mafia_win" : 2,
-        "citizen_total" : 24,
-        "citizen_win" : 13,
+        "mafia_total" : 5,
+        "mafia_win" : 3,
+        "citizen_total" : 27,
+        "citizen_win" : 14,
         "first_kill" : 3,
         "best_turn" : 1,
-        "game_points" : 88.5,
-        "role_points" : 48,
-        "players_points" : 14.1
+        "game_points" : 98,
+        "role_points" : 54,
+        "players_points" : 15.3
     },
     {
         "name" : "Алиса(Лера)",
         "sherif_total" : 2,
         "sherif_win" : 2,
-        "don_total" : 3,
-        "don_win" : 2,
-        "mafia_total" : 4,
+        "don_total" : 5,
+        "don_win" : 4,
+        "mafia_total" : 5,
         "mafia_win" : 2,
         "citizen_total" : 8,
         "citizen_win" : 2,
         "first_kill" : 3,
         "best_turn" : 2,
-        "game_points" : 41.5,
-        "role_points" : 24,
-        "players_points" : 6
+        "game_points" : 47.5,
+        "role_points" : 30,
+        "players_points" : 6.3
     },
     {
         "name" : "Тургенев",
@@ -55,12 +55,12 @@
         "don_win" : 0,
         "mafia_total" : 1,
         "mafia_win" : 1,
-        "citizen_total" : 10,
-        "citizen_win" : 4,
+        "citizen_total" : 14,
+        "citizen_win" : 5,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 27.5,
-        "role_points" : 15,
+        "game_points" : 35,
+        "role_points" : 18,
         "players_points" : 1.2
     },
     {
@@ -87,12 +87,12 @@
         "don_win" : 1,
         "mafia_total" : 2,
         "mafia_win" : 1,
-        "citizen_total" : 5,
-        "citizen_win" : 2,
+        "citizen_total" : 9,
+        "citizen_win" : 3,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 20,
-        "role_points" : 12,
+        "game_points" : 28,
+        "role_points" : 15,
         "players_points" : 2.1
     },
     {
@@ -117,15 +117,15 @@
         "sherif_win" : 0,
         "don_total" : 4,
         "don_win" : 3,
-        "mafia_total" : 8,
-        "mafia_win" : 4,
-        "citizen_total" : 15,
-        "citizen_win" : 7,
+        "mafia_total" : 9,
+        "mafia_win" : 5,
+        "citizen_total" : 17,
+        "citizen_win" : 8,
         "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 65,
-        "role_points" : 42,
-        "players_points" : 8.4
+        "game_points" : 72.5,
+        "role_points" : 48,
+        "players_points" : 9
     },
     {
         "name" : "Sol",
@@ -277,15 +277,15 @@
         "sherif_win" : 1,
         "don_total" : 1,
         "don_win" : 1,
-        "mafia_total" : 2,
-        "mafia_win" : 1,
+        "mafia_total" : 6,
+        "mafia_win" : 4,
         "citizen_total" : 6,
         "citizen_win" : 2,
         "first_kill" : 1,
         "best_turn" : 0,
-        "game_points" : 22,
-        "role_points" : 15,
-        "players_points" : 3.6
+        "game_points" : 32.5,
+        "role_points" : 24,
+        "players_points" : 6.3
     },
     {
         "name" : "Light",
@@ -353,19 +353,19 @@
     },
     {
         "name" : "Маг",
-        "sherif_total" : 0,
+        "sherif_total" : 1,
         "sherif_win" : 0,
         "don_total" : 0,
         "don_win" : 0,
         "mafia_total" : 2,
         "mafia_win" : 0,
-        "citizen_total" : 3,
-        "citizen_win" : 1,
-        "first_kill" : 1,
+        "citizen_total" : 6,
+        "citizen_win" : 2,
+        "first_kill" : 2,
         "best_turn" : 0,
-        "game_points" : 9.5,
-        "role_points" : 3,
-        "players_points" : 0
+        "game_points" : 21.5,
+        "role_points" : 6,
+        "players_points" : 1.8
     },
     {
         "name" : "Крис",
@@ -418,18 +418,18 @@
     },
     {
         "name" : "Бамблби",
-        "sherif_total" : 3,
+        "sherif_total" : 5,
         "sherif_win" : 3,
         "don_total" : 1,
         "don_win" : 1,
         "mafia_total" : 4,
         "mafia_win" : 3,
-        "citizen_total" : 5,
-        "citizen_win" : 3,
+        "citizen_total" : 7,
+        "citizen_win" : 4,
         "first_kill" : 0,
         "best_turn" : 0,
-        "game_points" : 31.5,
-        "role_points" : 30,
+        "game_points" : 38.5,
+        "role_points" : 33,
         "players_points" : 1.2
     },
     {
@@ -495,5 +495,37 @@
         "game_points" : 12,
         "role_points" : 3,
         "players_points" : 1.8
+    },
+    {
+        "name" : "Summan",
+        "sherif_total" : 0,
+        "sherif_win" : 0,
+        "don_total" : 1,
+        "don_win" : 0,
+        "mafia_total" :1,
+        "mafia_win" : 1,
+        "citizen_total" : 2,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 10.5,
+        "role_points" : 3,
+        "players_points" : 3
+    },
+    {
+        "name" : "Маваши",
+        "sherif_total" : 1,
+        "sherif_win" : 1,
+        "don_total" : 1,
+        "don_win" : 1,
+        "mafia_total" : 0,
+        "mafia_win" : 0,
+        "citizen_total" : 2,
+        "citizen_win" : 0,
+        "first_kill" : 0,
+        "best_turn" : 0,
+        "game_points" : 11,
+        "role_points" : 6,
+        "players_points" : 1.5
     }
 ]
